--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -9,6 +9,7 @@
   },
   "include": [
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    // "src/app/features/auth/login/*.spect.ts"
   ]
 }
